Add more alt image text

--- a/content/real-world-examples/bank-accounts/creating-a-new-bank-account.mdx
+++ b/content/real-world-examples/bank-accounts/creating-a-new-bank-account.mdx
@@ -70,7 +70,7 @@ cy.getBySelLike("accountNumber-input").type("123456789")
 cy.getBySelLike("submit").click()
 ```
 
-![](/images/real-world-examples/bank-accounts/creating-a-new-bank-account/Screen_Shot_2021-06-30_at_10.22.29_AM.png)
+![Screenshot of Cypress App with the Cypress Command log showing several commands having run in the backaccounts.spec.ts file. The application under test shows the Real World App with a Bank Accounts list with a Create button and a Delete button on each back account row.](/images/real-world-examples/bank-accounts/creating-a-new-bank-account/Screen_Shot_2021-06-30_at_10.22.29_AM.png)
 
 We then wait for our GraphQL mutation to create a new bank account.
 
