--- a/content/real-world-examples/transaction-feeds/app-layout-and-responsiveness.mdx
+++ b/content/real-world-examples/transaction-feeds/app-layout-and-responsiveness.mdx
@@ -83,6 +83,6 @@ cy.getBySel("sidenav-home").should("not.be.visible")
 cy.visualSnapshot("Desktop Side Navigation Not Visible")
 ```
 
-![](/images/real-world-examples/transaction-feeds/app-layout-and-responsiveness/Screen_Shot_2021-09-16_at_9.30.10_AM.png)
+![Screenshot of a passing test in the Cypress App with the 'click' command highligted in purple in the Cypress Command Log. The application under test shows the Real World App with a sidenav toggle element highlighted and a red dot for the click target of that element.](/images/real-world-examples/transaction-feeds/app-layout-and-responsiveness/Screen_Shot_2021-09-16_at_9.30.10_AM.png)
 
 ![](/images/real-world-examples/transaction-feeds/app-layout-and-responsiveness/Screen_Shot_2021-09-16_at_9.30.14_AM.png)
