--- a/content/real-world-examples/transaction-feeds/mine-feed-only-shows-personal-transactions.mdx
+++ b/content/real-world-examples/transaction-feeds/mine-feed-only-shows-personal-transactions.mdx
@@ -63,4 +63,4 @@ Finally, we make sure that the loading skeleton does not exist in the DOM.
 cy.getBySel("list-skeleton").should("not.exist")
 ```
 
-![](/images/real-world-examples/transaction-feeds/mine-feed-only-shows-personal-transactions/Screen_Shot_2021-09-16_at_9.32.34_AM.png)
+![Screenshot of Cypress App with a passing test and the 'assert' command highlighted in purple in the Cypress Command Log. The text beside the assert command says 'expected data-test=list-skeleton not to exist in the DOM'. The application under test shows the REal World App with a list of transactions.](/images/real-world-examples/transaction-feeds/mine-feed-only-shows-personal-transactions/Screen_Shot_2021-09-16_at_9.32.34_AM.png)
